--- a/site/index.html
+++ b/site/index.html
@@ -207,9 +207,10 @@
     </div>
 
     <footer>
-        <p>📍 Merkez Mah. Lezzet Sok. No: 10, İstanbul</p>
-        <p>📞 Sipariş ve Rezervasyon: (0212) BACA-5555</p>
-        <p>&copy; 2023 Schnitzel by Baca. Tüm Hakları Saklıdır.</p>
+        <p>📍 Halkapınar Mh Köşe Çarşı, 1348. Sk. No:1/1, 35170 Yenişehir</p>
+        <p>📞 Sipariş ve Rezervasyon: (0232) 449 49 25</p>
+        <p>&copy; 2025 Schnitzel by Baca. Tüm Hakları Saklıdır.</p>
     </footer>
 </body>
+
 </html>
