--- a/site/index.html
+++ b/site/index.html
@@ -208,9 +208,10 @@
 
     <footer>
         <p>📍 Halkapınar Mh Köşe Çarşı, 1348. Sk. No:1/1, 35170 Yenişehir</p>
-        <p>📞 Sipariş ve Rezervasyon: (0232) 449 49 25</p>
+        <p>📞 Sipariş : (0232) 449 49 25</p>
         <p>&copy; 2025 Schnitzel by Baca. Tüm Hakları Saklıdır.</p>
     </footer>
 </body>
 
 </html>
+
