--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cafe Baca Şinitzel Menüsü</title>
+
+<link rel="icon" type="image/png" href="Ekran görüntüsü 2025-12-15 152519.png">
+    
     <style>
         :root {
             --baca-yellow: #F3C35F;   
@@ -241,3 +244,4 @@
     </footer>
 </body>
 </html>
+
